--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ahash = "0.8.12"
 anyhow = "1.0"
 axum = "0.7"
+dashmap = "6.1.0"
+lazy_static = "1.5.0"
+prometheus = "0.14.0"
+prometheus-client = "0.24.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
